--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(jitter_params,default)
 S3method(jitter_params,farima)
 S3method(jitter_params,logistic)
 S3method(jitter_params,mackeyglass)
+S3method(jitter_params,weierstrass)
 export(arma)
 export(fBm)
 export(farima)
