--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(logistic)
 export(mackeyglass)
 export(quadratic)
 export(rsign)
+export(sim_names)
 export(sim_suite)
 export(weierstrass)
 importFrom(fArma,fbmSim)
