--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ S3method(jitter_params,logistic)
 S3method(jitter_params,mackeyglass)
 S3method(jitter_params,weierstrass)
 export(arma)
+export(cauchy)
 export(fBm)
 export(farima)
 export(gen)
